Tek3/DevOps/Bernstein/cadvisor.daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: cadvisor
  template:
    metadata:
      labels:
        name: cadvisor
    spec:
      containers:
        - name: cadvisor
          image: google/cadvisor:latest
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: disk
            mountPath: /dev/disk
            readOnly: true
          - name: docker
            mountPath: /var/lib/docker
            readOnly: true
          - name: var-run
            mountPath: /var/run
            readOnly: true
          - name: rootfs
            mountPath: /rootfs
            readOnly: true
          - name: sys
            mountPath: /sys
            readOnly: true
      restartPolicy: Always
      volumes:
      - name: rootfs
        hostPath:
          path: /
      - name: var-run
        hostPath:
          path: /var/run
      - name: sys
        hostPath:
          path: /sys
      - name: docker
        hostPath:
          path: /var/lib/docker
      - name: disk
        hostPath:
          path: /dev/disk
