Tek3/DevOps/Bernstein/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: poll
  labels:
    app: poll
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: poll
