Tek3/DevOps/Bernstein/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
   app: postgres
