Tek3/DevOps/Bernstein/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: redis
  labels:
    app: redis
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: redis
