Tek3/DevOps/Bernstein/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: result
  labels:
    app: result
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: result
