Tek3/DevOps/Bernstein/traefik.service.yaml
apiVersion: v1  
kind: Service  
metadata:  
 name: traefik
 namespace: kube-public
spec:  
  selector:
    app: traefik
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30021
    - name: admin
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30042
