Tek3/DevOps/Bernstein/result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result
spec:
  rules:
  - host: result.dop.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
